--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,13 +18,11 @@ jobs:
         with:
           path: "REPO"
 
-      - name: Copy script files around to stop .github from being added to the package then build the package
+      - name: Build the package
         run: |
-          mkdir PKG_SOURCE
-          cp -Rf REPO/usr REPO/DEBIAN PKG_SOURCE
-          dpkg-deb --build PKG_SOURCE pop-launcher-plugin-spell.deb
+          make build_deb_package
 
       - name: Release the Package
         uses: softprops/action-gh-release@v1
         with:
-          files: pop-launcher-plugin-spell.deb
+          files: pop-launcher-plugin-spell_0.1-1_all.deb
