--- a/debian/control
+++ b/debian/control
@@ -3,6 +3,6 @@ Version: 0.1
 Architecture: all
 Essential: no
 Priority: optional
-Depends: pop-launcher, hunspell
+Depends: pop-launcher, hunspell, xclip
 Maintainer: Faris Redza <faris.redza1999@gmail.com>
 Description: A spell checking plugin for pop-launcher using hunspell as a backend.
