--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "pop-launcher-plugin-spell"
+name = "spell"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.release]
+strip = true
 
 [dependencies]
 copypasta = "0.10.1"
 pop-launcher = "1.1.0"
 serde = "1.0.210"
 serde_json = "1.0.128"
-tokio = "1.40.0"
