--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,8 @@ jobs:
 
       - name: Build the package
         run: |
-          sudo apt install debmake debhelper dh-cargo
+          sudo apt-get update
+          sudo apt-get install -y debmake debhelper dh-cargo
           debmake -p pop-launcher-plugin-spell -t
           debuild -us -uc
 
