--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Rules-Requires-Root: no
 Package: pop-launcher-plugin-spell
 Architecture: any
 Depends:
+    pop-launcher,
     aspell,
     ${misc:Depends},
     ${shlibs:Depends}
